# Rust-Blog-Project

./: .env  Cargo.toml  README.md
docker-compose/: docker-compose.yml
src/: filters.rs  main.rs  state.rs
src/handlers/: api.rs  blogs.rs  mod.rs
src/models/: api.rs  blogs.rs  db.rs  mod.rs
src/routes/: api.rs  blogs.rs  mod.rs
src/templates/: blogs.rs
static/css/: home.css  post.css  style.css
templates/blog/: blogs.html  home.html  post.html
templates/errors/: 404.html
templates/partials/: footer.html  header.html
