[package]
name = "blogprojesi"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
actix-web = "4.9.0"
askama = "0.12.1"

sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json"
]}
serde = { version = "1.0.217", features = ["derive"] }
actix-files = "0.6.6"
serde_json = "1.0.135"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.7.0"
argon2 = { version = "0.5", features = ["password-hash"] }
tokio = "1.43.0"
html-escape = "0.2.13"
num_cpus = "1.16.0"

